package caulk_plus

import (
	"blockchain-crypto/pb"
	. "blockchain-crypto/types/curve/bls12381"
	"fmt"
)

type MultiProof struct {
	// common input
	// size of domain H (origin)
	N uint32
	// size of domain H (padded)
	N_padded uint32
	// size of domain V (origin)
	M uint32
	// size of domain V (padded)
	M_padded uint32
	// KZGÊâøËØ∫ ùíÑ = [C[x]]‚ÇÅ
	CCommit *PointG1
	// KZGÊâøËØ∫ ùíÇ = [A(x)]‚ÇÅ
	ACommit *PointG1
	// //////////////////////////////////////////
	// ÂÖ¨ÂºÄz_I = [Z_I'(x)]‚ÇÅ, c_I = [C_I'(x)]‚ÇÅ, ùíñ = [U'(x)]‚ÇÅ
	Z_I *PointG1
	C_I *PointG1
	U   *PointG1
	// ÂÖ¨ÂºÄ w = r‚ÇÅ^(-1)[W‚ÇÅ(x)+ùí≥‚ÇÇW‚ÇÇ(x)]‚ÇÇ-[r‚ÇÇ+r‚ÇÉx+r‚ÇÑx¬≤]‚ÇÇ, ùíâ = [H(x)]‚ÇÅ
	W *PointG2
	H *PointG1
	// ËæìÂá∫ v‚ÇÅ, v‚ÇÇ, œÄ‚ÇÅ, œÄ‚ÇÇ, œÄ_3
	// (v‚ÇÅ, œÄ‚ÇÅ) ‚Üê KZG.Open(U'(X), ùõº)
	V1   *Fr
	Pi_1 *PointG1
	// (v‚ÇÇ, œÄ‚ÇÇ) ‚Üê KZG.Open(P‚ÇÅ(X), v‚ÇÅ)
	V2   *Fr
	Pi_2 *PointG1
	// (0, œÄ‚ÇÉ) ‚Üê KZG.Open(P‚ÇÇ(X), ùõº)
	Pi_3 *PointG1
}

func ConvertFrToProtoFr(v *Fr) *pb.Fr {
	return &pb.Fr{
		E1: v[0],
		E2: v[1],
		E3: v[2],
		E4: v[3],
	}
}

func ConvertProtoFrToFr(v *pb.Fr) *Fr {
	return &Fr{v.E1, v.E2, v.E3, v.E4}
}

func ConvertFeToProtoFq(v *Fe) *pb.Fq {
	tmp := NewFe().Set(v)
	tmp.FromMont()
	return &pb.Fq{
		E1: tmp[0],
		E2: tmp[1],
		E3: tmp[2],
		E4: tmp[3],
		E5: tmp[4],
		E6: tmp[5],
	}
}

func ConvertProtoFqToFe(v *pb.Fq) *Fe {
	return (&Fe{v.E1, v.E2, v.E3, v.E4, v.E5, v.E6}).ToMont()
}

func ConvertFe2ToProtoFq2(v *Fe2) *pb.Fq2 {
	return &pb.Fq2{
		C1: ConvertFeToProtoFq(&v[0]),
		C2: ConvertFeToProtoFq(&v[1]),
	}
}

func ConvertProtoFq2ToFe2(v *pb.Fq2) *Fe2 {
	return &Fe2{
		*ConvertProtoFqToFe(v.C1),
		*ConvertProtoFqToFe(v.C2),
	}
}

func ConvertPointG1ToProtoG1Affine(p *PointG1) *pb.G1Affine {
	group1 := NewG1()
	tmp := group1.New().Set(p)
	if !tmp.IsAffine() {
		tmp = group1.Affine(tmp)
	}
	return &pb.G1Affine{
		X:        ConvertFeToProtoFq(&tmp[0]),
		Y:        ConvertFeToProtoFq(&tmp[1]),
		Infinity: group1.IsZero(tmp),
	}
}

func ConvertG1AffineToPointG1(p *pb.G1Affine) *PointG1 {
	return &PointG1{*ConvertProtoFqToFe(p.X), *ConvertProtoFqToFe(p.Y), *NewFe().One()}
}

func ConvertPointG2ToProtoG2Affine(p *PointG2) *pb.G2Affine {
	group2 := NewG2()
	tmp := group2.New().Set(p)
	if !tmp.IsAffine() {
		tmp = group2.Affine(tmp)
	}
	return &pb.G2Affine{
		X:        ConvertFe2ToProtoFq2(&tmp[0]),
		Y:        ConvertFe2ToProtoFq2(&tmp[1]),
		Infinity: group2.IsZero(tmp),
	}
}

func ConvertG2AffineToPointG2(p *pb.G2Affine) *PointG2 {
	return &PointG2{*ConvertProtoFq2ToFe2(p.X), *ConvertProtoFq2ToFe2(p.Y), *NewFe2().One()}
}

func ConvertProtoMultiProofToMultiProof(p *pb.MultiProof) *MultiProof {
	return &MultiProof{
		N:        p.N,
		N_padded: p.NPadded,
		M:        p.M,
		M_padded: p.MPadded,
		CCommit:  ConvertG1AffineToPointG1(p.CCommit),
		ACommit:  ConvertG1AffineToPointG1(p.ACommit),
		Z_I:      ConvertG1AffineToPointG1(p.Z_I),
		C_I:      ConvertG1AffineToPointG1(p.C_I),
		U:        ConvertG1AffineToPointG1(p.U),
		W:        ConvertG2AffineToPointG2(p.W),
		H:        ConvertG1AffineToPointG1(p.H),
		V1:       ConvertProtoFrToFr(p.V1),
		Pi_1:     ConvertG1AffineToPointG1(p.Pi_1),
		V2:       ConvertProtoFrToFr(p.V2),
		Pi_2:     ConvertG1AffineToPointG1(p.Pi_2),
		Pi_3:     ConvertG1AffineToPointG1(p.Pi_3),
	}
}

func ConvertMultiProofToProtoMultiProof(p *MultiProof) *pb.MultiProof {
	return &pb.MultiProof{
		N:       p.N,
		NPadded: p.N_padded,
		M:       p.M,
		MPadded: p.M_padded,
		CCommit: ConvertPointG1ToProtoG1Affine(p.CCommit),
		ACommit: ConvertPointG1ToProtoG1Affine(p.ACommit),
		Z_I:     ConvertPointG1ToProtoG1Affine(p.Z_I),
		C_I:     ConvertPointG1ToProtoG1Affine(p.C_I),
		U:       ConvertPointG1ToProtoG1Affine(p.U),
		W:       ConvertPointG2ToProtoG2Affine(p.W),
		H:       ConvertPointG1ToProtoG1Affine(p.H),
		V1:      ConvertFrToProtoFr(p.V1),
		Pi_1:    ConvertPointG1ToProtoG1Affine(p.Pi_1),
		V2:      ConvertFrToProtoFr(p.V2),
		Pi_2:    ConvertPointG1ToProtoG1Affine(p.Pi_2),
		Pi_3:    ConvertPointG1ToProtoG1Affine(p.Pi_3),
	}
}

// String ÂÆûÁé∞‰∫Üfmt.StringerÊé•Âè£ÔºåËøîÂõûMultiProofÁöÑÂ≠óÁ¨¶‰∏≤Ë°®Á§∫
func (mp MultiProof) String() string {
	return fmt.Sprintf(`MultiProof{
	N: %d,
	N_padded: %d,
	M: %d,
	M_padded: %d,
	CCommit: %v,
	ACommit: %v,
	Z_I: %v,
	C_I: %v,
	U: %v,
	W: %v,
	H: %v,
	V1: %v,
	Pi_1: %v,
	V2: %v,
	Pi_2: %v,
	Pi_3: %v,
}`,
		mp.N, mp.N_padded, mp.M, mp.M_padded,
		mp.CCommit, mp.ACommit, mp.Z_I, mp.C_I, mp.U,
		mp.W, mp.H, mp.V1, mp.Pi_1, mp.V2, mp.Pi_2, mp.Pi_3)
}
